Pcam2019_Validate/Vitis/.metadata/.plugins/org.eclipse.cdt.ui/Pcam2019_validate_app.build.log
18:39:37 **** Incremental Build of configuration Debug for project Pcam2019_validate_app ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Github/Zybo_mipi/Pcam2019_Validate/Vitis/Pcam2019_Validate/export/Pcam2019_Validate/sw/Pcam2019_Validate/standalone_domain/bspinclude/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
In file included from ../src/ov5640/TIMER.h:10,
                 from ../src/main.cc:8:
C:/Github/Zybo_mipi/Pcam2019_Validate/Vitis/Pcam2019_Validate/export/Pcam2019_Validate/sw/Pcam2019_Validate/standalone_domain/bspinclude/include/xtime_l.h:85:70: note: #pragma message: For the sleep routines, Global timer is being used
 #pragma message ("For the sleep routines, Global timer is being used")
                                                                      ^
In file included from ../src/main.cc:8:
../src/ov5640/TIMER.h:46:38: error: expected class-name before '{' token
 class PS_TIMER : public TIMER_Client {
                                      ^
make[1]: *** [src/subdir.mk:55: src/main.o] Error 1
make: *** [makefile:47: all] Error 2

18:39:38 Build Finished (took 1s.22ms)

